--- a/learnPython3/calculate_pi.ipynb
+++ b/learnPython3/calculate_pi.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 代码"
+    "# 计算圆周率代码 \n",
+    "\n",
+    "- 蒙特卡洛方法Mont\n",
+    "- 泰勒级数展开\n",
+    "- Chudnovsky公式方法\n",
+    "- 迭代方法"
    ]
   },
   {
@@ -15,7 +20,6 @@
    "source": [
     "import random\n",
     "import math\n",
-    "\n",
     "\n",
     "def draw(inner_points,outer_points):\n",
     "    import matplotlib.pyplot as plt\n",
@@ -36,8 +40,15 @@
     "    x1 = r*np.cos(theta)\n",
     "    x2 = r*np.sin(theta)\n",
     "    ax.plot(x1, x2,color='black')\n",
-    "    plt.show()\n",
-    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def MonPi(number):\n",
     "    N2 = number\n",
     "    N1 = 0.\n",
@@ -53,8 +64,15 @@
     "            outer_points.append([x,y])\n",
     "    \n",
     "    print(\"Monte PI:\",4*N1/N2)\n",
-    "    draw(inner_points,outer_points)\n",
-    "\n",
+    "    draw(inner_points,outer_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def TaylorPi(k):\n",
     "    sum,odd = 0,True\n",
     "    for i in range(1,k):\n",
@@ -122,20 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iterative PI: 3.141592653589794\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Iterative_cal(100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -154,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
