--- a/markdown/1194.md
+++ b/markdown/1194.md
@@ -1,14 +1,11 @@
-# 于子涵个人介绍
+# 个人介绍
 
-### 来自 电子工程系 无98班
+姓名：于子涵
 
-**学号**：2019011194
+来自：电子系
 
-### 最喜欢的数学公式：
+爱好：科技
 
-##### 傅里叶变换及其逆变换
+性格：沙雕
 
-​			$F[f(x)]=\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{+\infty}{f(x)e^{-i sx}dx}$
-
-​			$F^{-1}[f(s)]=\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{+\infty}{f(s)e^{i xs}ds}$
-
+擅长：沙雕
