--- a/markdown/自我介绍.md
+++ b/markdown/自我介绍.md
@@ -1,12 +1,10 @@
-​      自我介绍
+# 自我介绍
 
-名字- 王力人
+## 我是林巧
 
-学号- 2018080086
+## 我来自美术学院，美911
 
-院系- 电子系
+## 我喜欢画画，喜欢欣赏美丽的艺术作品
 
-班级- 无82
-
-格言- "The sky is the limit!!!"
+## 擅长画小人，把房间弄乱
 
