--- a/markdown/自我介绍.md
+++ b/markdown/自我介绍.md
@@ -1,12 +1,13 @@
-​      自我介绍
+# 自我介绍
 
-名字- 王力人
+姓名 ：郑洪沛
 
-学号- 2018080086
+班级 ：计算机系 计95
 
-院系- 电子系
+个人爱好 ：乒乓球、钢琴、素描、看鬼畜视频
 
-班级- 无82
+特长 ：钢琴、素描、单身
 
-格言- "The sky is the limit!!!"
 
+
+<img src="C:\Users\HP\Pictures\表情包\微信图片_20191108142850.jpg" style="zoom:67%;" />
