--- a/markdown/自我介绍.md
+++ b/markdown/自我介绍.md
@@ -1,12 +1,12 @@
-​      自我介绍
+# 自我介绍
 
-名字- 王力人
+**姓名：**卡玉德
 
-学号- 2018080086
+**性别：**女
 
-院系- 电子系
+**院系：**建筑学院
 
-班级- 无82
+**爱好：**看书、听音乐、跳舞、做模型
 
-格言- "The sky is the limit!!!"
+**性格：**稍微内向
 
