--- a/Study-Memo/0028-Day2.md
+++ b/Study-Memo/0028-Day2.md
@@ -1,6 +1,6 @@
 # 制造工程体验DAY 2 小结
 
-### 人工智能系统
+### 建92 张馨文 2019010028
 
 
 
@@ -13,6 +13,8 @@
 - 人工智能在制造业的应用。
 
   期待能够返校进行实践！期待可以体验小车的自动驾驶！
+  
+  和老师互动也很有意思呢！
 
 
 
