--- a/markdown/2020-Spring/3345-刘梓涵.md
+++ b/markdown/2020-Spring/3345-刘梓涵.md
@@ -1,22 +1,26 @@
-# 自我介绍
+## 人工智能应用
 
-## 基本信息
+### 智能医疗
 
-*姓名*
+#### 一、定义
 
-**刘梓涵**
+​		智能医疗是通过打造健康档案区域医疗信息平台，利用最先进的物联网技术，实现患者与医务人员、医疗机构、医疗设备之间的互动，逐步达到信息化。
 
-*性别*
+ #### 二、现阶段水准
 
-**男**
+1、当地医疗
 
-*家乡*
+​		人工智能通过分析患者过敏和用药史、药品产地批次等信息，有效记录和分析处方变更等信息，为慢性病治疗和保健提供参考；
 
-**湖南**
+2、远程医疗
 
-*院系*
-
-**药学院**
+​		结合5G技术开展远程会诊，辅助图像诊断。
 
 
+
+#### 三、发展前景
+
+1、智能手术刀，实现精准切除，降低因手部抖动造成的组织损伤；
+
+2、癌细胞识别，确定放射剂量，结合质子重离子实施精准放疗。
 
