--- a/learnLinux/0-1使用命令行.md
+++ b/learnLinux/0-1使用命令行.md
@@ -7,3 +7,8 @@
 ### linux/unix  与mac类似方法，进入终端（terminal）就进入了命令行模式，当然如果是服务器基本只有终端模式。
 ## 命令的练习
 ### 查看网络信息：windows下用ipconfig，mac下用ifconfig，linux下用ip address（简写ip a）
+### 地址信息会包含iP地址，子网掩码，默认网关等信息。
+### ping命令的使用   ping上面看到的ip地址；会返回网络信息，让后ping 默认网关
+### 继续ping dns ping 域名等等。
+### IP地址，掩码，网关，DNS等术语由老师讲解。
+
