--- a/learnLinux/0-1使用命令行.md
+++ b/learnLinux/0-1使用命令行.md
@@ -10,5 +10,6 @@
 ### 地址信息会包含iP地址，子网掩码，默认网关等信息。
 ### ping命令的使用   ping上面看到的ip地址；会返回网络信息，让后ping 默认网关
 ### 继续ping dns ping 域名等等。
-### IP地址，掩码，网关，DNS等术语由老师讲解。
+### 
 
+<table><tr><td bgcolor=yellow>IP地址，掩码，网关，DNS等术语由老师讲解。</td></tr></table>
