--- a/learnLinux/0-1使用命令行.md
+++ b/learnLinux/0-1使用命令行.md
@@ -12,5 +12,5 @@
 ### 继续ping dns ping 域名等等。
 ### 
 
-<table><tr><td bgcolor=yellow>IP地址，掩码，网关，DNS等术语由老师讲解。</td></tr></table>
-<font color=Blue>我是蓝色</font>
+
+<font color=Blue>IP地址，掩码，网关，DNS等术语由老师讲解。</font>
