--- a/Memos/Student/2020-Autumn/Markdown-Git/1445.md
+++ b/Memos/Student/2020-Autumn/Markdown-Git/1445.md
@@ -1,11 +1,4 @@
-# Hello,world!
+# # 自我介绍
 
 ### 我是梁亨源，来自自95班。
-
-<p> 
-    I like eating apples.<br>
-    hhh
-</p>
-
-I am **strong** and *outgoing*.
 
