--- a/Memos/Study-Memo/2020-autumn/樊齐航学习收获.md
+++ b/Memos/Study-Memo/2020-autumn/樊齐航学习收获.md
@@ -2,5 +2,6 @@
   **_樊齐航 2019010551 9月23日_**  
   本节课的一个收获是较为**系统**的学习了*Markdown*的书写规范，以前一直使用__vscode__进行Markdown的书写，并不知道Markdown还有系统的编辑软件例如<font color=red>Typora</font>，对我来说算是涨见识了。  
   另一个收获是学会利用 **_图形化_** 界面操作GitHub，以前一直是在 **_Git_** 上利用命令行进行远程的 **_pull_** 或者 **_push_** 。无疑图形化的界面会给开发者带来 **_极大的方便_** 。
-  我非常期待后续课程中对于硬件的继续学习。
+  另外，今天还复习了一部分 **_python_** 的基础操作，温故知新，首席匪浅。  
+  我非常期待后续课程中对于<font color=red>硬件</font>的继续学习。  
  
