--- a/Memos/Study-Memo/2020-autumn/0045.md
+++ b/Memos/Study-Memo/2020-autumn/0045.md
@@ -8,11 +8,11 @@
 
 第一次使用命令行还是在gitbash上面，可以通过几句简单的命令达到平时需要反复拖动的操作，我还是特别喜欢这种命令行操作的。gitbash和Linux的命令也基本类似（也可能就是一样的？），我们一起练习了一些以前没见过的命令，也见到了很神奇的1752年9月少了11天。Linux系统里面可以真正查看万年历，还可以找到自己出生那天到底是星期几。
 
-![p1](C:\Users\17472\Desktop\1.png)
+![p1](https://github.com/xzy-xyz/test/blob/master/1.png)
 
 然后也尝试了一个vim命令行，这个真的难用，中途退退进进好几次，总是完不成它写的任务。
 
-![p2](C:\Users\17472\Desktop\2.jpg)
+![p2](https://github.com/xzy-xyz/test/blob/master/2.png)
 
 不过大概还是很强大吧.......
 
@@ -24,7 +24,7 @@
 
 主要用了yum和2048的小游戏，还有一个lampp的软件包。虽然我对最后AI处理图片的问题最感兴趣，不过这节课时间不太够，只能放到下节课去尝试了。这几个安装的步骤就完全按照GitHub上写的教程走就能很快做好，所以在安装完成之后我开始玩2048
 
-<img src="C:\Users\17472\Desktop\3.jpg" alt="p3" style="zoom:50%;" />
+<img src="https://github.com/xzy-xyz/test/blob/master/1.png" alt="p3" style="zoom:50%;" />
 
 不过好可惜最后有一下走反了，然后game over。
 
