--- a/Memos/Study-Memo/2020-autumn/0622.md
+++ b/Memos/Study-Memo/2020-autumn/0622.md
@@ -1,1 +1,6 @@
-sfjkka
+
+王兆鹏2020010622     学习日志
+   老师首先给我们讲了关于Linux的一些基本信息，我了解到了四种服务类型，平台以及几大厂商。我还了解到Linux这个操作系统在当前市场的份额。我还了解了有关云计算，IP地址，子网掩码等内容，这都是我之前不甚了解到的。
+   第二节课上，我先练习到了关于命令行的知识，，了解了自己的IP地址等。下载了putty软件后，我首先在老师的指导下进行了Linux命令的练习。与此同时，我还在其中进行了键盘操作的练习。
+   第三节课上，老师首先向我们介绍了Linux软件安装的三种方法。在尝试第一种方法时，我在输入网址时由于多了一个“s”而出错，在老师指出后，我体会到了科学的严谨精神的重要性。在练习第二种方法时，我学会了如何下载并且运行2048这款游戏。在电脑上玩2048还是首次，这让我体会到了这款软件的强大/第三种下载方法由于时间关系我没能完成，晚上我还将继续完成。
+    作为0字班新生，我对这些操作还不是很熟练，希望在接下来的学习中能够不断进步，加油！
