Rename 2448 Day1.md to 2448 Day1-1.md

--- a/Memos/Study-Memo/2020-autumn/2448 Day1-1.md
+++ b/Memos/Study-Memo/2020-autumn/2448 Day1-1.md
@@ -1,4 +1,4 @@
-
+```python
 my_string4 = my_string.replace('is', 'will be')
 print(my_string4)
 
@@ -38,3 +38,4 @@ acat.jump_x()
 acat.jump_y()
 acat.showdes()
 
+```
