--- a/Memos/Study-Memo/2020-autumn/0045_week8.md
+++ b/Memos/Study-Memo/2020-autumn/0045_week8.md
@@ -1,6 +1,6 @@
 # week 8
 
-今天是最后一次上课了，但是希望这个课可以开全周呀！这八周的课程真的超级丰富，而且实打实学到了很多知识。比如前几天学会了给机器人创造动作，也学会了用Linux操作系统，也了解了一些树莓派的使用方法~最后一节课我们学了用python控制智能小车，感觉自己写代码的能力真的提高了哈哈哈哈。中间发现了好多老师说以前也没遇到的问题，然后我们通过实践来一步一步尝试看问题出在哪里。最后我们两个又是第一个把collision avoidance做好的，而且效果很好~
+今天是最后一次上课了，但是希望这个课可以开全周呀！这八周的课程真的超级丰富，而且实打实学到了很多知识。比如前几天学会了给机器人创造动作，也学会了用Linux操作系统，也了解了一些树莓派的使用方法。最后一节课我们学了用python控制智能小车，感觉自己写代码的能力真的提高了哈哈哈哈。中间发现了好多老师说以前也没遇到的问题，然后我们通过实践来一步一步尝试看问题出在哪里。最后我们两个又是第一个把collision avoidance做好的，而且效果很好~
 
 毕竟训练的时候成功率也很高：
 
