--- a/Memos/Study-Memo/2020-autumn/0365.md
+++ b/Memos/Study-Memo/2020-autumn/0365.md
@@ -1,12 +1,12 @@
-CC07  第四周学习日志
+第八周日志
 
+最后一次课啦
 
+终于玩到了小车了，继机器人之后，对小车可谓心心念念
 
-这节课简要了解了Linux的情况，对基本命令进行了练习
+今天又有人串了，在我上次连到别人的树莓派后，今天遥控手柄又串了
 
-用Putty登录远程服务器进行软件的下载
+自动避障遥控操作算是幸运的一组了虽然磕磕绊绊动不动也出幺蛾子，但队友太强大，重启太有效
 
-安装2048 游戏
-
-玩的有点欢脱
+谢谢老师们这八周的耐心与帮助
 
